v0.0.5, the bug that TestCaseCoverage doesn't read completely by SpltCoverageReader fixed